@@ -1,3 +1,8 @@
+2016-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/xpm.c (ReadXPMImage): Fix SourceForge bug #333
+	heap-buffer-overflow in coders/xpm.c:409.
+
 2015-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* ttf: Update bundled freetype to release 2.6.2.
